# audio_processing

./: .cproject  .project  AndroidManifest.xml
files/: coeffA.txt  coeffB.txt  coeffFIR.txt
jni/: Android.mk  Application.mk  CMakeLists.txt  WAVheader.c  WAVheader.h  const.h  main.c  main_mine.c  original_main.c  processing.c  processing.h  readFile.c  readFile.h
libs/armeabi/: gdb.setup
libs/armeabi-v7a/: gdb.setup
res/layout/: activity_main.xml  dialog.xml  playing.xml
res/values/: strings.xml
src/com/example/audioprocessing/: AudioData.java  AudioPlaybackManager.java  AudioRecordingHandler.java  AudioRecordingThread.java  BarGraphRenderer.java  Complex.java  FFT.java  FFTData.java  MainActivity.java  MediaPlayerManager.java  PlaybackHandler.java  Renderer.java  VisualizerView.java
